gitops-disable/falcosidekick/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falcosidekick-ui
  namespace: security-system
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "falco.menghi.uy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: falcosidekick-ui
          port: 2802
